--- a/index.html
+++ b/index.html
@@ -1,18 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+
+    <title>E-Library</title>
 </head>
+
 <body>
     <header>
+        <nav>
+            <div>
+                <a href="">
+                    <span class="fa fa-user"></span>
+                    ادخل لحسابك او سجل الان
+                </a>
+                <a href="">
+                    <span class="fa fa-star"></span>
+                    الرئيسية
+                </a>
+                <a href="">
+                    <span class="fa fa-truck"></span>
+                    من نحن
+                </a>
+                <a href="">
+                    <span class="fa fa-check-square"></span>
+                    اتصل بنا
+                </a>
+                <a href="">
+                    <span class="fa fa-exclamation-circle"></span>
+                    المساعدة
+                </a>
+                <a href="">
+                    <span class="fa fa-map-marker"></span>
+                    سياسة الخصوصية
+                </a>
+                <a class="language" href="">
+                    <span></span>
+                    <p>اليمن</p>
+                    <p>YER</p>
+                </a>
+                <a href="">
+                    English
+                    <span class="fa fa-language"></span>
+                </a>
+            </div>
+        </nav>
+        <div class="header-bottom">
+            <div>
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="search-div">
+
+
+                <input type="search" placeholder="البحث">
+                <button class="fa fa-search"></button>
+                </button>
+                <button class="fa fa-shopping-cart"></button>
+            </div>
+        </div>
 
     </header>
 
     <footer>
-        
+        <div class="uperfoter">
+            <div>
+                <div>
+                    <h4>انظم الى نشرتنا البريدية</h4>
+                    <form action="">
+                        <input type="text" placeholder="ادخل بريدك الالكنروني">
+                        <button type="submit">اشتراك</button>
+                    </form>
+                </div>
+
+            </div>
+
+
+            <div>
+                <h4>خدمة العملاء</h4>
+                <p>
+                    <br> مبيعات للشركات
+                    <br> الأسئلة المتكررة
+                    <br> دليل التسويق و المطبوعات
+                    <br> مواقع المعارض
+                    <br> سياسة الضمان
+                    <br> سياسة الاسترجاع و الاستبدال
+                    <br> اتصل بنا >
+
+                </p>
+                <h4>920000089</h4>
+            </div>
+
+
+            <div>
+                <h4>خدمات جرير</h4>
+                <p>
+                    <br> خدمة تقسيط المشتريات
+                    <br> خدمات ما بعد البيع
+                    <br> خدمة الحماية الشاملة
+                    <br> حماية أجهزة آبل
+                    <br> بطاقة خصم جرير
+                    <br> بطاقة جرير للهدايا
+                </p>
+            </div>
+
+            <div>
+                <h4>روابط سريعة</h4>
+                <p>
+                    <br> إصدارات جرير
+                    <br> قارئ جرير
+                    <br> شركاء برامج المكافئات
+                    <br> خدمات شركات الإتصالات
+                </p>
+            </div>
+            <div>
+                <h4>عن جرير</h4>
+                <p>
+                    <br> من نحن
+                    <br> الحوكمة
+                    <br> علاقات المستثمرين والتقارير
+                    <br> الاستدامة
+                    <br> الأخبار
+                </p>
+                <h4>
+                    فرص عمل
+                </h4>
+            </div>
+            <div class="fonts">
+                <h4>تواصل معنا</h4>
+                <div class="cotact-icons">
+                    <a href="" class="fa fa-facebook"></a>
+                    <a href="" class="fa fa-twitter"></a>
+                    <a href="" class="fa fa-youtube-play"></a>
+                    <a href="" class="fa fa-instagram"></a>
+                    <a href="" class="fa fa-linkedin"></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="down-footer">
+            <div>
+                <img src="images/details.png" alt="">
+            </div>
+            <div>
+                <p>سياسة الخصوصية | شروط الخدمة</p>
+                <p>.جميع الحقوق محفوظة لمكتبة جرير © 2015. س.ت. 1010032264. اونلاين س.ت. 1010654213</p>
+            </div>
+
+        </div>
     </footer>
 </body>
+
 </html>
