--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                 <input type="text" placeholder="البريد الالكتروني او رقم الجوال">
                 <div>
                     <input type="password" placeholder="كلمة السر">
-                    <p>نسيت</p>
+                    <p class="forget"> ؟ نسيت</p>
                     <button class="login">تسجيل الدخول</button>
                     <div class="down">
                         <p >ليس لديك حساب</p>
