--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div>
-                <a href="">
+                <a href="login.html">
                     <span class="fa fa-user"></span>
                     ادخل لحسابك او سجل الان
                 </a>
