--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                     <button class="login">تسجيل الدخول</button>
                     <div class="down">
                         <p >ليس لديك حساب</p>
-                        <button class="createAccount">إنشاء حساب جديد</button>
+                        <a href="signup.html" class="createAccount" >إنشاء حساب جديد</a>
                     </div>
                    
                 </div>
