--- a/signup.html
+++ b/signup.html
@@ -49,9 +49,9 @@
                         لديك حساب ؟
 
                     </span>
-                    <span>
+                    <a href="login.html">
                         تسجيل الدخول >
-                    </span>
+                    </a>
                 </p>
             </div>
         </form>
