--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
                     <section class="bookRow1">
                         <div class="bookCard-v1">
                             <div>
-                                <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt=""
-                                    class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt="" class="image">
+                                <img src="assets/images/books/eat-sleep-back.jpg" class="image2" alt="">
                             </div>
                             <h3>
                                 <span>
@@ -277,7 +276,7 @@
                             <div>
                                 <img src="assets/images/books/you-Allah.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/you-Allah-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -328,7 +327,7 @@
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -372,7 +371,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/noon.jpg" width="200" height="200" alt="" class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/noon.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -427,7 +426,7 @@
                             <div>
                                 <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/eat-sleep-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -471,7 +470,7 @@
                             <div>
                                 <img src="assets/images/books/you-Allah.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/you-Allah-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -522,7 +521,7 @@
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -566,7 +565,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/noon.jpg" width="200" height="200" alt="" class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/noon.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -621,7 +620,7 @@
                             <div>
                                 <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/eat-sleep-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -665,7 +664,7 @@
                             <div>
                                 <img src="assets/images/books/you-Allah.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/you-Allah-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -716,7 +715,7 @@
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -760,7 +759,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/noon.jpg" width="200" height="200" alt="" class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/noon.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -815,7 +814,7 @@
                             <div>
                                 <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/eat-sleep-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -859,7 +858,7 @@
                             <div>
                                 <img src="assets/images/books/you-Allah.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/you-Allah-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -910,7 +909,7 @@
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -954,7 +953,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/noon.jpg" width="200" height="200" alt="" class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/noon.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -1009,7 +1008,7 @@
                             <div>
                                 <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/eat-sleep-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -1053,7 +1052,7 @@
                             <div>
                                 <img src="assets/images/books/you-Allah.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/you-Allah-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -1104,7 +1103,7 @@
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
                                     class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -1148,7 +1147,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/noon.jpg" width="200" height="200" alt="" class="image">
-                                <img src="" alt="">
+                                <img src="assets/images/books/noon.jpg" alt="" class="image2">
                             </div>
                             <h3>
                                 <span>
@@ -1382,8 +1381,14 @@
         <span class="fa fa-close" id="closesignup"></span>
     </section>
 
-    <section class="bookSlider">
-        <img src="" alt="" id="imgmodel">
+    <section class="bookSliderContainer" id="bookSliderContainer">
+        <span class="fa fa-angle-right" id="right"></span>
+        <div class="bookSlider" id="bookSlider">
+            <img src="" alt="" id="imgmodel">
+            <img src="" alt="" id="imgmode2">
+            
+        </div>
+        <span class="fa fa-angle-left" id="left"></span>
         <span class="fa fa-close" id="closing"></span>
     </section>
     <script src="assets/js/js.js"></script>
