--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
                                 <p>
                                     <img src="assets/images/svg/start.svg" width="25" alt="">
                                 </p>
-                                <p class="bookReferFont">
+                                <a href="./templates/payment_page.html" class="bookReferFont">
                                     <span class="fa fa-cart-plus"></span>
-                                </p>
+                                </a>
                                 <p>
                                     <img src="assets/images/svg/arrows.svg" width="25" alt="">
                                 </p>
@@ -312,9 +312,9 @@
                                 <p>
                                     <img src="assets/images/svg/start.svg" width="25" alt="">
                                 </p>
-                                <p class="bookReferFont">
+                                <a href="./templates/payment_page.html" class="bookReferFont">
                                     <span class="fa fa-cart-plus"></span>
-                                </p>
+                                </a>
                                 <p>
                                     <img src="assets/images/svg/arrows.svg" width="25" alt="">
                                 </p>
