--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="search-div">
 
 
-                    <input type="search" placeholder="البحث">
+                    <input type="search" value="" placeholder="البحث" id="search">
                     <button class="fa fa-search"></button>
                     </button>
                     <button class="fa fa-shopping-cart"></button>
@@ -240,7 +240,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 كلي و نامي و ابهري الأخرين
                                 (كتاب إلكتروني)
                             </p>
@@ -291,7 +291,7 @@
                                 <span class="yellow-star fa fa-star"></span>
                                 <span class="yellow-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 لأنك الله
                                 (كتاب إلكتروني)
                             </p>
@@ -335,7 +335,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 أبابيل
                                 (كتاب إلكتروني)
                             </p>
@@ -386,7 +386,7 @@
                                 <span class="gray-star fa fa-star"></span>
                                 <span class="gray-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 ن النسوية
                                 (كتاب إلكتروني)
                             </p>
@@ -434,7 +434,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 كلي و نامي و ابهري الأخرين
                                 (كتاب إلكتروني)
                             </p>
@@ -485,7 +485,7 @@
                                 <span class="yellow-star fa fa-star"></span>
                                 <span class="yellow-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 لأنك الله
                                 (كتاب إلكتروني)
                             </p>
@@ -529,7 +529,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 أبابيل
                                 (كتاب إلكتروني)
                             </p>
@@ -580,7 +580,7 @@
                                 <span class="gray-star fa fa-star"></span>
                                 <span class="gray-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 ن النسوية
                                 (كتاب إلكتروني)
                             </p>
@@ -628,7 +628,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 كلي و نامي و ابهري الأخرين
                                 (كتاب إلكتروني)
                             </p>
@@ -679,7 +679,7 @@
                                 <span class="yellow-star fa fa-star"></span>
                                 <span class="yellow-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 لأنك الله
                                 (كتاب إلكتروني)
                             </p>
@@ -723,7 +723,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 أبابيل
                                 (كتاب إلكتروني)
                             </p>
@@ -774,7 +774,7 @@
                                 <span class="gray-star fa fa-star"></span>
                                 <span class="gray-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 ن النسوية
                                 (كتاب إلكتروني)
                             </p>
@@ -822,7 +822,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 كلي و نامي و ابهري الأخرين
                                 (كتاب إلكتروني)
                             </p>
@@ -873,7 +873,7 @@
                                 <span class="yellow-star fa fa-star"></span>
                                 <span class="yellow-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 لأنك الله
                                 (كتاب إلكتروني)
                             </p>
@@ -917,7 +917,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 أبابيل
                                 (كتاب إلكتروني)
                             </p>
@@ -968,7 +968,7 @@
                                 <span class="gray-star fa fa-star"></span>
                                 <span class="gray-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 ن النسوية
                                 (كتاب إلكتروني)
                             </p>
@@ -1016,7 +1016,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 كلي و نامي و ابهري الأخرين
                                 (كتاب إلكتروني)
                             </p>
@@ -1067,7 +1067,7 @@
                                 <span class="yellow-star fa fa-star"></span>
                                 <span class="yellow-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 لأنك الله
                                 (كتاب إلكتروني)
                             </p>
@@ -1111,7 +1111,7 @@
                                 </span>
                                 <p>كتاب إلكتروني</p>
                             </h3>
-                            <p>
+                            <p class="searchCheck">
                                 أبابيل
                                 (كتاب إلكتروني)
                             </p>
@@ -1162,7 +1162,7 @@
                                 <span class="gray-star fa fa-star"></span>
                                 <span class="gray-star fa fa-star"></span>
                             </div>
-                            <p>
+                            <p class="searchCheck">
                                 ن النسوية
                                 (كتاب إلكتروني)
                             </p>
