--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <input type="search" value="" placeholder="البحث" id="search">
                     <button class="fa fa-search"></button>
                     </button>
-                    <button class="fa fa-shopping-cart"></button>
+                    <button class="fa fa-shopping-cart" id="headerChart"></button>
                 </div>
             </div>
 
@@ -261,7 +261,7 @@
                                 <p>
                                     <img src="assets/images/svg/start.svg" width="25" alt="">
                                 </p>
-                                <a href="./templates/payment_page.html" class="bookReferFont">
+                                <a  class="bookReferFont">
                                     <span class="fa fa-cart-plus"></span>
                                 </a>
                                 <p>
@@ -1391,6 +1391,7 @@
         <span class="fa fa-angle-left" id="left"></span>
         <span class="fa fa-close" id="closing"></span>
     </section>
+    <p id="ehsas">sooo</p>
     <script src="assets/js/js.js"></script>
 </body>
 
