last localStorage edit

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <input type="search" value="" placeholder="البحث" id="search">
                     <button class="fa fa-search"></button>
                     </button>
-                    <button class="fa fa-shopping-cart" id="headerChart"></button>
+                    <button class="fa fa-shopping-cart" id="headerChart">0</button>
                 </div>
             </div>
 
