--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
-                                    class="image">
+                                    class="image offer">
                                 <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
@@ -519,7 +519,7 @@
                         <div class="bookCard-v1">
                             <div>
                                 <img src="assets/images/books/Ababeel.jpg" width="200" height="200" alt=""
-                                    class="image">
+                                    class="image offer">
                                 <img src="assets/images/books/Ababeel-back.jpg" alt="" class="image2">
                             </div>
                             <h3>
