--- a/catogery.html
+++ b/catogery.html
@@ -85,39 +85,7 @@
         </header>
 
 
-        <section id="counter">
-            <div class="counterChild">
-                <button id="counterChild1But1"></button>
-
-                &nbsp;&nbsp;
-                &nbsp;&nbsp;
-                <button id="counterChild2But1"></button>
-
-                &nbsp;&nbsp;
-                &nbsp;&nbsp;
-                <button id="counterChild3But1"></button>
-
-                &nbsp;&nbsp;
-                &nbsp;&nbsp;
-                <button id="counterChild4But1"></button>
-
-
-            </div>
-            <div class="SmHd">
-                <p>ثانية</p>
-                &nbsp;&nbsp;
-
-                <p>دقيقة</p>
-                &nbsp;&nbsp;
-
-                <p>ساعة</p>
-                &nbsp;&nbsp;
-
-                <p>يوم</p>
-
-
-            </div>
-        </section>
+       
         <!-- slider by html css pure -->
         <section class="CSSgal">
 
@@ -210,7 +178,7 @@
 
 
             </aside>
-            <section class="productImgs">
+            <section class="productImgs productImgscate">
                 <div class="storBy">
                     <div class="storByDiv">
                         <label for="categoriesSorting">الترتيب بحسب : </label>
@@ -1385,6 +1353,39 @@
         </div>
         <span class="fa fa-angle-left" id="left"></span>
         <span class="fa fa-close" id="closing"></span>
+        <section id="counter">
+            <div class="counterChild">
+                <button id="counterChild1But1"></button>
+
+                &nbsp;&nbsp;
+                &nbsp;&nbsp;
+                <button id="counterChild2But1"></button>
+
+                &nbsp;&nbsp;
+                &nbsp;&nbsp;
+                <button id="counterChild3But1"></button>
+
+                &nbsp;&nbsp;
+                &nbsp;&nbsp;
+                <button id="counterChild4But1"></button>
+
+
+            </div>
+            <div class="SmHd">
+                <p>ثانية</p>
+                &nbsp;&nbsp;
+
+                <p>دقيقة</p>
+                &nbsp;&nbsp;
+
+                <p>ساعة</p>
+                &nbsp;&nbsp;
+
+                <p>يوم</p>
+
+
+            </div>
+        </section>
     </section>
  
     <script src="assets/js/js.js"></script>
