--- a/index.html
+++ b/index.html
@@ -134,43 +134,43 @@
         <section class="categories">
             <div class="cateDiv">
                 <p class="fa fa-angle-right"></p>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/deen.svg" width="50" alt="">
                     </div>
                     <h3 style="color: #5e2f26;">دين</h3>
                 </a>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/tareek.svg" width="50" alt="">
                     </div>
                     <h3 style="color: #ea7726;">تاريخ</h3>
                 </a>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/rwaiaat.svg" width="50" alt="">
                     </div>
                     <h3 style="color: #76689a;">روايات</h3>
                 </a>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/seiasa.svg" width="50" alt="">
                     </div>
                     <h3 style="color: #bc4077;">سياسة</h3>
                 </a>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/ekesad.svg" width="50" alt="">
                     </div>
                     <h3 style="color: #4389b6;">اقتصاد</h3>
                 </a>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/game.svg" width="50" alt="">
                     </div>
                     <h3 style="color: #7db444;">طبخ</h3>
                 </a>
-                <a href="./catogery.html">
+                <a href="./templates/catogery.html">
                     <div>
                         <img src="./assets/images/svg/phone.svg" width="50" alt="">
                     </div>
@@ -196,6 +196,7 @@
                 <div class="booksimgs">
                     <section class="bookRow1">
                         <div class="bookCard-v1">
+                            <a href="./templates/catogery.html" style="color: inherit; text-decoration:none;">
                             <div>
                                 <img src="assets/images/books/eat-sleep.jpg" width="200" height="200" alt=""
                                     class="image">
@@ -235,7 +236,7 @@
                                     <img src="assets/images/svg/arrows.svg" width="25" alt="">
                                 </p>
                             </div>
-
+                        </a>
                         </div>
 
 
